add auth-aws
