# src/docs/swagger.json
@@ -155,6 +155,163 @@
 				},
 				"type": "object",
 				"additionalProperties": false
+			},
+			"DeliveryMediumType": {
+				"type": "string",
+				"enum": [
+					"EMAIL",
+					"SMS"
+				]
+			},
+			"CodeDeliveryDetailsType": {
+				"description": "<p>The delivery details for an email or SMS message that Amazon Cognito sent for authentication or\n            verification.</p>",
+				"properties": {
+					"Destination": {
+						"type": "string",
+						"description": "<p>The email address or phone number destination where Amazon Cognito sent the code.</p>"
+					},
+					"DeliveryMedium": {
+						"$ref": "#/components/schemas/DeliveryMediumType",
+						"description": "<p>The method that Amazon Cognito used to send the code.</p>"
+					},
+					"AttributeName": {
+						"type": "string",
+						"description": "<p>The name of the attribute that Amazon Cognito verifies with the code.</p>"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ResponseMetadata": {
+				"properties": {
+					"httpStatusCode": {
+						"type": "number",
+						"format": "double",
+						"description": "The status code of the last HTTP response received for this operation."
+					},
+					"requestId": {
+						"type": "string",
+						"description": "A unique identifier for the last request sent for this operation. Often\nrequested by AWS service teams to aid in debugging."
+					},
+					"extendedRequestId": {
+						"type": "string",
+						"description": "A secondary identifier for the last request sent. Used for debugging."
+					},
+					"cfId": {
+						"type": "string",
+						"description": "A tertiary identifier for the last request sent. Used for debugging."
+					},
+					"attempts": {
+						"type": "number",
+						"format": "double",
+						"description": "The number of times this operation was attempted."
+					},
+					"totalRetryDelay": {
+						"type": "number",
+						"format": "double",
+						"description": "The total amount of time (in milliseconds) that was spent waiting between\nretry attempts."
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"SignUpCommandOutput": {
+				"properties": {
+					"UserConfirmed": {
+						"type": "boolean",
+						"description": "<p>A response from the server indicating that a user registration has been\n            confirmed.</p>"
+					},
+					"CodeDeliveryDetails": {
+						"$ref": "#/components/schemas/CodeDeliveryDetailsType",
+						"description": "<p>The code delivery details returned by the server response to the user registration\n            request.</p>"
+					},
+					"UserSub": {
+						"type": "string",
+						"description": "<p>The 128-bit ID of the authenticated user. This isn't the same as\n            <code>username</code>.</p>"
+					},
+					"$metadata": {
+						"$ref": "#/components/schemas/ResponseMetadata",
+						"description": "Metadata pertaining to this request."
+					}
+				},
+				"required": [
+					"$metadata"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"NewDeviceMetadataType": {
+				"description": "<p>The new device metadata type.</p>",
+				"properties": {
+					"DeviceKey": {
+						"type": "string",
+						"description": "<p>The device key.</p>"
+					},
+					"DeviceGroupKey": {
+						"type": "string",
+						"description": "<p>The device group key.</p>"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"AuthenticationResultType": {
+				"description": "<p>The authentication result.</p>",
+				"properties": {
+					"AccessToken": {
+						"type": "string",
+						"description": "<p>A valid access token that Amazon Cognito issued to the user who you want to\n            authenticate.</p>"
+					},
+					"ExpiresIn": {
+						"type": "number",
+						"format": "double",
+						"description": "<p>The expiration period of the authentication result in seconds.</p>"
+					},
+					"TokenType": {
+						"type": "string",
+						"description": "<p>The token type.</p>"
+					},
+					"RefreshToken": {
+						"type": "string",
+						"description": "<p>The refresh token.</p>"
+					},
+					"IdToken": {
+						"type": "string",
+						"description": "<p>The ID token.</p>"
+					},
+					"NewDeviceMetadata": {
+						"$ref": "#/components/schemas/NewDeviceMetadataType",
+						"description": "<p>The new device metadata from an authentication result.</p>"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ConfirmSignUpCommandOutput": {
+				"properties": {
+					"$metadata": {
+						"$ref": "#/components/schemas/ResponseMetadata",
+						"description": "Metadata pertaining to this request."
+					}
+				},
+				"required": [
+					"$metadata"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"AdminDeleteUserCommandOutput": {
+				"properties": {
+					"$metadata": {
+						"$ref": "#/components/schemas/ResponseMetadata",
+						"description": "Metadata pertaining to this request."
+					}
+				},
+				"required": [
+					"$metadata"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -335,7 +492,7 @@
 				]
 			}
 		},
-		"/auth/sign-up": {
+		"/auth/signup": {
 			"post": {
 				"operationId": "SignUp",
 				"responses": {
@@ -344,57 +501,27 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"anyOf": [
-										{
-											"properties": {
-												"response": {
-													"properties": {
-														"userConfirmed": {
-															"type": "boolean"
-														},
-														"username": {
-															"type": "string"
-														}
-													},
-													"required": [
-														"userConfirmed",
-														"username"
-													],
-													"type": "object"
-												},
-												"statusCode": {
-													"type": "number",
-													"format": "double"
-												}
-											},
-											"required": [
-												"response",
-												"statusCode"
-											],
-											"type": "object"
+									"properties": {
+										"result": {
+											"$ref": "#/components/schemas/SignUpCommandOutput"
 										},
-										{
-											"properties": {
-												"response": {
-													"type": "string"
-												},
-												"statusCode": {
-													"type": "number",
-													"format": "double"
-												}
-											},
-											"required": [
-												"response",
-												"statusCode"
-											],
-											"type": "object"
+										"message": {
+											"type": "string"
 										}
-									]
+									},
+									"required": [
+										"result",
+										"message"
+									],
+									"type": "object"
 								}
 							}
 						}
 					}
 				},
+				"tags": [
+					"AuthAWS"
+				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -403,9 +530,6 @@
 						"application/json": {
 							"schema": {
 								"properties": {
-									"agent": {
-										"type": "string"
-									},
 									"password": {
 										"type": "string"
 									},
@@ -424,61 +548,7 @@
 				}
 			}
 		},
-		"/auth/verify": {
-			"post": {
-				"operationId": "Verify",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"properties": {
-										"response": {
-											"type": "string"
-										},
-										"statusCode": {
-											"type": "number",
-											"format": "double"
-										}
-									},
-									"required": [
-										"response",
-										"statusCode"
-									],
-									"type": "object"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"properties": {
-									"code": {
-										"type": "string"
-									},
-									"email": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"code",
-									"email"
-								],
-								"type": "object"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/auth/sign-in": {
+		"/auth/signin": {
 			"post": {
 				"operationId": "SignIn",
 				"responses": {
@@ -487,61 +557,27 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"anyOf": [
-										{
-											"properties": {
-												"response": {
-													"properties": {
-														"refreshToken": {
-															"type": "string"
-														},
-														"idToken": {
-															"type": "string"
-														},
-														"accessToken": {
-															"type": "string"
-														}
-													},
-													"required": [
-														"refreshToken",
-														"idToken",
-														"accessToken"
-													],
-													"type": "object"
-												},
-												"statusCode": {
-													"type": "number",
-													"format": "double"
-												}
-											},
-											"required": [
-												"response",
-												"statusCode"
-											],
-											"type": "object"
+									"properties": {
+										"result": {
+											"$ref": "#/components/schemas/AuthenticationResultType"
 										},
-										{
-											"properties": {
-												"response": {
-													"type": "string"
-												},
-												"statusCode": {
-													"type": "number",
-													"format": "double"
-												}
-											},
-											"required": [
-												"response",
-												"statusCode"
-											],
-											"type": "object"
+										"message": {
+											"type": "string"
 										}
-									]
+									},
+									"required": [
+										"result",
+										"message"
+									],
+									"type": "object"
 								}
 							}
 						}
 					}
 				},
+				"tags": [
+					"AuthAWS"
+				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -559,6 +595,114 @@
 								},
 								"required": [
 									"password",
+									"email"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/auth/confirm": {
+			"post": {
+				"operationId": "ConfirmUserSignUp",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"result": {
+											"$ref": "#/components/schemas/ConfirmSignUpCommandOutput"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"result",
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"AuthAWS"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"confirmationCode": {
+										"type": "string"
+									},
+									"email": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"confirmationCode",
+									"email"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/auth/delete": {
+			"delete": {
+				"operationId": "RemoveUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"result": {
+											"$ref": "#/components/schemas/AdminDeleteUserCommandOutput"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"result",
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"AuthAWS"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"email": {
+										"type": "string"
+									}
+								},
+								"required": [
 									"email"
 								],
 								"type": "object"
